[Gobal] Add SQLite Wrapper and fix msbuild outputs

--- a/TorrentDelivery.Service/TorrentDelivery.Service.csproj
+++ b/TorrentDelivery.Service/TorrentDelivery.Service.csproj
@@ -2,6 +2,13 @@
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <OutputDir>..\OUTPUT\</OutputDir>
+    <BinDebug>bin\Debug\</BinDebug>
+    <BinRelease>bin\Release\</BinRelease>
+    <ObjDebug>obj\Debug\</ObjDebug>
+    <ObjRelease>obj\Release\</ObjRelease>
+  </PropertyGroup>
+  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{E3EA15D5-AF2E-4411-B122-A80F5F60DE85}</ProjectGuid>
@@ -17,7 +24,9 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    
+  <OutputPath>$(OutputDir)$(BinDebug)$(MSBuildProjectName)\</OutputPath>
+  <BaseIntermediateOutputPath>$(OutputDir)$(ObjDebug)$(MSBuildProjectName)\</BaseIntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -26,7 +35,8 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+  <OutputPath>$(OutputDir)$(BinRelease)$(MSBuildProjectName)\</OutputPath>
+  <BaseIntermediateOutputPath>$(OutputDir)$(ObjRelease)$(MSBuildProjectName)\</BaseIntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -37,12 +47,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="IRunner.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
