--- a/TorrentDelivery.GUI/TorrentDelivery.GUI.csproj
+++ b/TorrentDelivery.GUI/TorrentDelivery.GUI.csproj
@@ -2,6 +2,13 @@
 <Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <OutputDir>..\OUTPUT\</OutputDir>
+    <BinDebug>bin\Debug\</BinDebug>
+    <BinRelease>bin\Release\</BinRelease>
+    <ObjDebug>obj\Debug\</ObjDebug>
+    <ObjRelease>obj\Release\</ObjRelease>
+  </PropertyGroup>
+  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{DDAA273B-6EA1-4114-BCFE-D4130F3C3607}</ProjectGuid>
@@ -17,8 +24,8 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\OUTPUT\bin\Debug\</OutputPath>
-    <BaseIntermediaryOutputPath>..\OUTPUT\obj\Debug\</BaseIntermediaryOutputPath>
+  <OutputPath>$(OutputDir)$(BinDebug)$(MSBuildProjectName)\</OutputPath>
+  <BaseIntermediateOutputPath>$(OutputDir)$(ObjDebug)$(MSBuildProjectName)\</BaseIntermediateOutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -27,8 +34,8 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\OUTPUT\bin\Release\</OutputPath>
-    <BaseIntermediaryOutputPath>..\OUTPUT\obj\Release\</BaseIntermediaryOutputPath>
+  <OutputPath>$(OutputDir)$(BinRelease)$(MSBuildProjectName)\</OutputPath>
+  <BaseIntermediateOutputPath>$(OutputDir)$(ObjRelease)$(MSBuildProjectName)\</BaseIntermediateOutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -46,10 +53,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="**\*.cs" Exclude="**\*Form.cs;**\*.Designer.cs"/>
+    <Compile Include="Program.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="**\*Form.cs">
       <SubType>Form</SubType>
     </Compile>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -80,13 +91,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="BeforeBuild">
-    <Message Text="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+    <Warning Text="$(BaseIntermediaryOutputPath)" />
   </Target>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
 </Project>
