--- a/cmdcli/cmdcli.csproj
+++ b/cmdcli/cmdcli.csproj
@@ -47,8 +47,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="**\*.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
