--- a/Basics/packages.config
+++ b/Basics/packages.config
@@ -2,6 +2,9 @@
 <packages>
   <package id="EntityFramework" version="6.0.0" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net45" />
+  <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net452" />
+  <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net452" />
+  <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.102.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.102.0" targetFramework="net452" />
